--- a/index.html
+++ b/index.html
@@ -237,6 +237,85 @@
       <p class="footer-Store">Store</p>
       <p class="footer-Mac">Mac</p>
       <p class="footer-iPad">iPad</p>
+      <p class="footer-iPhone">iPhone</p>
+      <p class="footer-Watch">Watch</p>
+      <p class="footer-Vision">Vision</p>
+      <p class="footer-AirPods">AirPods</p>
+      <p class="footer-TVandHome">TV & Home</p>
+      <p class="footer-AirTag">AirTag</p>
+      <p class="footer-Accessories">Accessories</p>
+      <p class="footer-GiftCards">Gift Cards</p>
+      <p class="footer-AppleWallet"><b>Apple Wallet</b></p>
+      <p class="footer-Wallet">Wallet</p>
+      <p class="footer-AppleCard">Apple Card</p>
+      <p class="footer-ApplePay">Apple Pay</p>
+      <p class="footer-AppleCash">Apple Cash</p>
+      <p class="footer-Account"><b>Account</b></p>
+      <p class="footer-ManageAppleID">Manage Your Apple ID</p>
+      <p class="footer-AppleStoreAccount">Apple Store Account</p>
+      <p class="footer-iCloudcom">iCloud.com</p>
+      <p class="footer-Entertainment"><b>Entertainment</b></p>
+      <p class="footer-AppleOne">Apple One</p>
+      <p class="footer-AppleTVplus">Apple TV+</p>
+      <p class="footer-AppleMusic">Apple Music</p>
+      <p class="footer-AppleArcade">Apple Arcade</p>
+      <p class="footer-AppleFitnessplus">Apple Fitness+</p>
+      <p class="footer-AppleNewsplus">Apple News+</p>
+      <p class="footer-ApplePodcasts">Apple Podcasts</p>
+      <p class="footer-AppleBooks">Apple Books</p>
+      <p class="footer-AppStore">App Store</p>
+      <p class="footer-AppleStore"><b>Apple Store</b></p>
+      <p class="footer-FindaStore">Find a Store</p>
+      <p class="footer-GeniusBar">Genius Bar</p>
+      <p class="footer-TodayatApple">Today at Apple</p>
+      <p class="footer-GroupReservations">Group Reservations</p>
+      <p class="footer-AppleCamp">Apple Camp</p>
+      <p class="footer-AppleStoreApp">Apple Store App</p>
+      <p class="footer-CertifiedRefurbished">Certified Refurbished</p>
+      <p class="footer-AppleTradeIn">Apple Trade In</p>
+      <p class="footer-Financing">Financing</p>
+      <p class="footer-CarrierDealsatApple">Carrier Deals at Apple</p>
+      <p class="footer-OrderStatus">Order Status</p>
+      <p class="footer-ShoppingHelp">Shopping Help</p>
+      <p class="footer-ForBusiness"><b>For Business</b></p>
+      <p class="footer-AppleandBusiness">Apple and Business</p>
+      <p class="footer-ShopforBusiness">Shop for Business</p>
+      <p class="footer-ForEducation"><b>For Education</b></p>
+      <p class="footer-AppleandEducation">Apple and Education</p>
+      <p class="footer-ShopforK-12">Shop for K-12</p>
+      <p class="footer-ShopforCollege">Shop for College</p>
+      <p class="footer-ForHealthcare"><b>For Healthcare</b></p>
+      <p class="footer-AppleinHealthcare">Apple in Healthcare</p>
+      <p class="footer-HealthonAppleWatch">Health on Apple Watch</p>
+      <p class="footer-HealthRecordsoniPhone"><b>Health Records on iPhone</b></p>
+      <p class="footer-ForGovernment"><b>For Government</b></p>
+      <p class="footer-ShopforGovernment">Shop for Government</p>
+      <p class="footer-ShopforVeteransandMilitary">Shop for Veterans and Military</p>
+      <p class="footer-AppleValues"><b>Apple Values</b></p>
+      <p class="footer-Accessibility">Accessibility</p>
+      <p class="footer-Education">Education</p>
+      <p class="footer-Environment">Environment</p>
+      <p class="footer-InclusionandDiversity">Inclusion and Diversity</p>
+      <p class="footer-Privacy">Privacy</p>
+      <p class="footer-RacialEquityandJustice">Racial Equity and Justice</p>
+      <p class="footer-SupplyChain">Supply Chain</p>
+      <p class="footer-AboutApple"><b>About Apple</b></p>
+      <p class="footer-Newsroom">Newsroom</p>
+      <p class="footer-AppleLeadership">Apple Leadership</p>
+      <p class="footer-CareerOpportunities">Career Opportunities</p>
+      <p class="footer-Investors">Investors</p>
+      <p class="footer-EthicsandCompliance">Ethics & Compliance</p>
+      <p class="footer-Events">Events</p>
+      <p class="footer">.</p>
+      <p class="footer-ContactApple">Contact Apple</p>
+      <p class="footer-Morewaystoshop">More ways to shop: <a href="">Find an Apple</a> Store or <a href="">other retailer</a> near you. Or call 1-800-MY-APPLE.</p>
+      <p class="Copyright">Copyright © 2024 Apple Inc. All rights reserved.</p>
+      <p class="footer-PrivacyPolicy">Privacy Policy</p>
+      <p class="footer-TermsofUse"> Terms of Use</p>
+      <p class="footer-SalesandRefunds"> Sales and Refunds</p>
+      <p class="footer-Legal">Legal</p>
+      <p class="footer-SiteMap">Site Map</p>
+      <p class="footer-UnitedStates">United States</p>
     </footer>
 </body>
 </html>
